--- a/P010748.opf/meta.yml
+++ b/P010748.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P010748
+id: P010748
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1PD137811
   title: བོད་སོག་ཆོས་འབྱུང་།
-  volume: ''
   author: ''
+  volumes: {}
