--- a/P010748.opf/layers/v001/Pagination.yml
+++ b/P010748.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 53d4b701bc5b46cd93261e4bd4211167
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   478607cb64224916b41b2de81adc212a:
