--- a/P010748.opf/meta.yml
+++ b/P010748.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P010748
 initial_creation_type: ocr
+created_at: 31/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W1PD137811
   title: བོད་སོག་ཆོས་འབྱུང་།
